# openforge

./: .aiignore  .env.example  .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.ai/: config.json  rules.md
.github/workflows/: release.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: approval.ts  colors.ts  env.ts  index.ts  repl.ts  runtime.ts  stream.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: henry.w@example.net  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/adapters/: core.ts
apps/desktop/src/components/agent/: AgentPanel.tsx
apps/desktop/src/components/chat/: ChatPanel.tsx
apps/desktop/src/components/editor/: EditorTabs.tsx  InlineEditOverlay.tsx  MonacoEditor.tsx
apps/desktop/src/hooks/: useGhostCompletion.ts  useKeyboardShortcuts.ts
apps/desktop/src/host/: browser.ts  fs.ts  tauri.ts  types.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/stores/: agentStore.ts  approvalStore.ts  chatStore.ts  editorStore.ts  settingsStore.ts  workspaceStore.ts
apps/desktop/src/styles/: global.css
docs/: CONTRIBUTING.md  FAQ.md  ROADMAP.md  configuration.md
extensions/vscode/: README.md  package.json  tsconfig.json
extensions/vscode/src/: approval.ts  chatProvider.ts  coreBridge.ts  extension.ts
scripts/: make-squircle-icon.cjs  make-squircle-icon.mjs  smoke-test.mjs
(+10 files in other folders)
